--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Boilerplate</title>
+  <link rel="stylesheet" text="text/css" href="/styles.css"/>
 </head>
 
 <body>
